--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,51 @@
   .posts-striped li:nth-child(even) {
     @apply bg-lightgray dark:bg-gray dark:text-black
   }
+
+  .button {
+    min-width: 150px;
+    max-width: 250px;
+    z-index: 1;
+    -webkit-backface-visibility: hidden;
+    -moz-osx-font-smoothing: grayscale;
+  }
+
+  .button.button--aylen {
+    -webkit-transition: color 0.3s;
+    transition: color 0.3s;
+  }
+  .button--aylen::before,
+  .button--aylen::after {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    bottom: 100%;
+    left: 0;
+    z-index: -1;
+    -webkit-transition: -webkit-transform 0.3s;
+    transition: transform 0.3s;
+    -webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+    transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+  }
+  .button--aylen::before {
+    background: #a0aec0;
+  }
+  .button--aylen::after {
+    background: #4a5568;
+  }
+  .button--aylen:hover::before,
+  .button--aylen:hover::after {
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+  .button--aylen:hover::after {
+    -webkit-transition-delay: 0.175s;
+    transition-delay: 0.175s;
+  }
 }
+
+
 /* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
